Partial work on login and signup

--- a/server/.env
+++ b/server/.env
@@ -3,3 +3,6 @@ DB_URI=mongodb://localhost:27017/ecomerce
 JwT_SECRET=adfbjhsberjgsygfwegaaegaegehwbsrbhe
 JWT_EXPIRE=7D
 COOKIE_EXPIRE=5
+CLOUDINARY_NAME=dfwfghwgo
+CLOUDINARY_API_KEY=173534259168265
+CLOUDINARY_API_SECRET=OPXdise0-ggyV1hgimBpIj1_2Ak
