--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
   "author": "abhinav anand",
   "license": "ISC",
   "dependencies": {
+    "@stripe/react-stripe-js": "^1.6.0",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^1.27.0",
     "cookie-parser": "^1.4.5",
@@ -22,5 +23,6 @@
     "path": "^0.12.7",
     "stripe": "^8.178.0",
     "validator": "^13.6.0"
-  }
+  },
+  "proxy": "http://127.0.0.1:5001"
 }
