--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.22.0",
     "chart.js": "^3.5.1",
     "country-state-city": "^3.0.1",
+    "numeral": "^2.0.6",
     "overlay-navbar": "^1.0.4",
     "react": "^17.0.2",
     "react-alert": "^7.0.3",
